testsuite/tests/gadt/gadt13.stderr

gadt13.hs:15:13: error:
    Couldn't match expected type ‘r0’
                with actual type ‘String -> [Char]’
      ‘r0’ is untouchable
        inside the constraints: t0 ~ Int
        bound by a pattern with constructor: I :: Int -> Term Int,
                 in an equation for ‘shw’
        at gadt13.hs:15:6-8
    ‘r0’ is a rigid type variable bound by
         the inferred type of shw :: Term t0 -> r0 at gadt13.hs:15:1
    Possible fix: add a type signature for ‘shw’
    Relevant bindings include
      shw :: Term t0 -> r0 (bound at gadt13.hs:15:1)
    Possible cause: ‘(.)’ is applied to too many arguments
    In the expression: ("I " ++) . shows t
    In an equation for ‘shw’: shw (I t) = ("I " ++) . shows t
